// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation tests default renderer 1`] = `
<div
  className="Navigation"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))
          disabled={true}
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))
            className="Display__Options"
          >
            <WithStyles(ForwardRef(FormControl))>
              <WithStyles(ForwardRef(Select))
                aria-label="navigationButtonsStyle"
                disabled={true}
                id="navigationButtonsStyle"
                name="navigationButtonsStyle"
                onChange={[Function]}
                value="sides"
              >
                <WithStyles(ForwardRef(MenuItem))
                  value="sides"
                >
                  <FormattedMessage
                    values={Object {}}
                  />
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  value="top"
                >
                  <FormattedMessage
                    values={Object {}}
                  />
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Select))>
            </WithStyles(ForwardRef(FormControl))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))
          disabled={true}
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <Connect(ResetToursItemContainer) />
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <Connect(PremiumFeature)>
              <WithStyles(ForwardRef(Switch))
                checked={false}
                color="secondary"
                onChange={[Function]}
                value="active"
              />
            </Connect(PremiumFeature)>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Navigation tests switchs behavior 1`] = `
<div
  className="Navigation"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))
          disabled={true}
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))
            className="Display__Options"
          >
            <WithStyles(ForwardRef(FormControl))>
              <WithStyles(ForwardRef(Select))
                aria-label="navigationButtonsStyle"
                disabled={true}
                id="navigationButtonsStyle"
                name="navigationButtonsStyle"
                onChange={[Function]}
                value="sides"
              >
                <WithStyles(ForwardRef(MenuItem))
                  key="sides"
                  value="sides"
                >
                  <FormattedMessage
                    values={Object {}}
                  />
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  key="top"
                  value="top"
                >
                  <FormattedMessage
                    values={Object {}}
                  />
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Select))>
            </WithStyles(ForwardRef(FormControl))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))
          disabled={true}
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <Connect(ResetToursItemContainer) />
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <Connect(PremiumFeature)>
              <WithStyles(ForwardRef(Switch))
                checked={false}
                color="secondary"
                onChange={[Function]}
                value="active"
              />
            </Connect(PremiumFeature)>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Navigation tests switchs behavior 2`] = `
<div
  className="Navigation"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={true}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={true}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))
          disabled={false}
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))
            className="Display__Options"
          >
            <WithStyles(ForwardRef(FormControl))>
              <WithStyles(ForwardRef(Select))
                aria-label="navigationButtonsStyle"
                disabled={false}
                id="navigationButtonsStyle"
                name="navigationButtonsStyle"
                onChange={[Function]}
                value="sides"
              >
                <WithStyles(ForwardRef(MenuItem))
                  key="sides"
                  value="sides"
                >
                  <FormattedMessage
                    values={Object {}}
                  />
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  key="top"
                  value="top"
                >
                  <FormattedMessage
                    values={Object {}}
                  />
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Select))>
            </WithStyles(ForwardRef(FormControl))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={true}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={true}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))
          disabled={true}
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <Connect(ResetToursItemContainer) />
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <Connect(PremiumFeature)>
              <WithStyles(ForwardRef(Switch))
                checked={false}
                color="secondary"
                onChange={[Function]}
                value="active"
              />
            </Connect(PremiumFeature)>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;
